changes i don't remember

--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,11 @@
-N_PROCESS=4
+N_PROCESS=3
 
 run: decrypt
 	mpiexec -np $(N_PROCESS) ./decrypt
 
 decrypt: decrypt.c header.h
-	mpicc decrypt.c -o decrypt -lcrypt 
+	mpicc decrypt.c -o decrypt -lcrypt -g
+
+clean:
+	rm log.debug
+	rm decrypt
